# NodeGenLib

./: .gitignore  CMakeLists.txt  README.md  README.txt
docs/: notes.txt
include/NodeGenLib/: advancing_front.hpp
src/: advancing_front.cpp  advancing_front.hpp  step_advancing_front.cpp  step_generate_boundary_nodes.cpp  step_inspect.cpp  step_plot_pcurves.cpp  step_print_contents.cpp  step_print_faces_info.cpp
